RESOLVED FIXED276734
[JSC] Debug build fails to compile when JIT_OPERATION_VALIDATION is disabled
https://bugs.webkit.org/show_bug.cgi?id=276734
Summary [JSC] Debug build fails to compile when JIT_OPERATION_VALIDATION is disabled
Marcus Plutowski
Reported 2024-07-17 13:47:27 PDT
rdar://131950848 If you try to compile JSC in debug with JIT_OPERATION_VALIDATION forced to 0, some portions of the feature still compile (and therefore throw errors) because JIT_OPERATION_VALIDATION_ASSERT_ENABLED currently only checks ASSERT_ENABLED. At one point it was gated by ENABLE(JIT_OPERATION_VALIDATION), so this was not the case, but since then that gate was weakened and changed to `#if ENABLE(JIT_OPERATION_VALIDATION) || ENABLE(JIT_OPERATION_DISASSEMBLY)`. As such, JIT_OPERATION_VALIDATION_ASSERT_ENABLED should explicitly check for JIT_OPERATION_VALIDATION to ensure it’s not turned on when not requested. This is helpful for debugging.
Attachments
Marcus Plutowski
Comment 1 2024-07-17 13:50:04 PDT
EWS
Comment 2 2024-07-17 17:47:35 PDT
Committed 281070@main (292ee2d452da): <https://commits.webkit.org/281070@main> Reviewed commits have been landed. Closing PR #30919 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-17 17:49:19 PDT
Note You need to log in before you can comment on or make changes to this bug.