Only set JIT_OPERATION_VALIDATION_ASSERT_ENABLED when JIT_OPERATION_VALIDATION is enabled https://bugs.webkit.org/show_bug.cgi?id=276734 rdar://131950848

Reviewed by Alexey Shvayka and Keith Miller.

This prevents the problematic pieces of code from being compiled when
they're not wanted, while not changing the behavior of
JITOperationValidation otherwise.

* Source/JavaScriptCore/assembler/JITOperationList.h:

Canonical link: https://commits.webkit.org/281070@main