Source/JavaScriptCore/assembler/JITOperationList.h
@@ -36,7 +36,9 @@ namespace JSC {
 
 // This indirection is provided so that we can manually force on assertions for
 // testing even on release builds.
-#define JIT_OPERATION_VALIDATION_ASSERT_ENABLED ASSERT_ENABLED
+#if ENABLE(JIT_OPERATION_VALIDATION) && ASSERT_ENABLED
+#define ENABLE_JIT_OPERATION_VALIDATION_ASSERT 1
+#endif
 
 struct JITOperationAnnotation;
 
@@ -52,7 +54,7 @@ public:
         return m_validatedOperations.get(removeCodePtrTag(bitwise_cast<void*>(pointer)));
     }
 
-#if JIT_OPERATION_VALIDATION_ASSERT_ENABLED
+#if ENABLE(JIT_OPERATION_VALIDATION_ASSERT)
     template<typename PtrType>
     void* inverseMap(PtrType pointer) const
     {
@@ -73,7 +75,7 @@ public:
     template<typename T> static void assertIsJITOperation(T function)
     {
         UNUSED_PARAM(function);
-#if JIT_OPERATION_VALIDATION_ASSERT_ENABLED
+#if ENABLE(JIT_OPERATION_VALIDATION_ASSERT)
         RELEASE_ASSERT(!Options::useJIT() || JITOperationList::instance().map(function));
 #endif
     }
@@ -81,7 +83,7 @@ public:
     template<typename T> static void assertIsJITOperationWithValidation(T function)
     {
         UNUSED_PARAM(function);
-#if JIT_OPERATION_VALIDATION_ASSERT_ENABLED
+#if ENABLE(JIT_OPERATION_VALIDATION_ASSERT)
         RELEASE_ASSERT(!Options::useJIT() || JITOperationList::instance().inverseMap(function));
 #endif
     }
@@ -96,12 +98,12 @@ private:
 #if ENABLE(JIT_OPERATION_VALIDATION)
     ALWAYS_INLINE void addPointers(const JITOperationAnnotation* begin, const JITOperationAnnotation* end);
 
-#if JIT_OPERATION_VALIDATION_ASSERT_ENABLED
+#if ENABLE(JIT_OPERATION_VALIDATION_ASSERT)
     void addInverseMap(void* validationEntry, void* pointer);
 #endif
 
     HashMap<void*, void*> m_validatedOperations;
-#if JIT_OPERATION_VALIDATION_ASSERT_ENABLED
+#if ENABLE(JIT_OPERATION_VALIDATION_ASSERT)
     HashMap<void*, void*> m_validatedOperationsInverseMap;
 #endif
 #endif // ENABLE(JIT_OPERATION_VALIDATION)
